# harness-lens

./: .gitignore  README.md  pyproject.toml
harness_lens/: __init__.py  benchmark.py  cli.py  components.py  decision.py  detector.py  enforce.py  experience.py  gui.py  harness.py  judge.py  llm.py  reconstructor.py  server.py  service.py  skill.py  store.py
harness_lens/agents/: __init__.py  debugger.py  evolver.py
harness_lens/criteria/: __init__.py  domain.py  engine.py  invariant.py  layer.py  qa.py
harness_lens/hooks/: __init__.py  install.py  record.py
